--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,41 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<%= form_for @user, class: 'new_user' do |f| %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <br>
+    <%= f.text_field :name, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :height, 'Height (in inches)' %>
+    <br>
+    <%= f.text_field :height, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :happiness, 'How happy are you? (1-5 scale)' %>
+    <br>
+    <%= f.text_field :happiness, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :nausea, 'How nauseous are you? (1-5 scale)' %>
+    <br>
+    <%= f.text_field :nausea, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :tickets, 'How many dollars are in your pocket?' %>
+    <br>
+    <%= f.text_field :tickets, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :password %>
+    <br>
+    <%= f.text_field :password, class: 'form-control' %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit class: 'btn btn-primary' %>
+  </div>
+<% end %>
