--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,12 @@
+<% if flash[:message] %>
+  <div class="center alert">
+    <p><%= flash[:message] %></p>
+  </div>
+<% end %>
+
 <div class="center">
   <div class="info">
+    <p><strong><%= 'ADMIN' if @user.admin %></strong></p>
     <p><strong>Name:</strong> <%= @user.name %></p>
     <p><strong>Tickets:</strong> <%= @user.tickets %></p>
     <p><strong>Mood:</strong>  <%= @user.mood %></p>
