--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,6 +30,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :admin, 'Check box if you are a theme park owner' %>
+    <%= f.check_box :admin, class: 'form-check-input' %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :password %>
     <br>
     <%= f.text_field :password, class: 'form-control' %>
