--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,13 @@
             <span class="icon-bar"></span>
           </button>
         <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+        <% if current_user.nil? %>
+          <a class="navbar-brand" href="/signup">Sign Up</a>
+          <a class="navbar-brand" href="/login">Login</a>
+        <% else %>
+          <a class="navbar-brand" href="<%= user_path(current_user) %>"><%= current_user.name %>'s profile</a>
+          <a class="navbar-brand" href="/logout">Logout</a>
+        <% end %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -29,7 +36,13 @@
 
     <!-- content -->
     <div class="container"  role="main">
+            <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>">
+            <%= message %>
+          </div>
+        <% end %>
       <%= yield %>
     </div>
   </body>
 </html>
+
