--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,11 @@
             <span class="icon-bar"></span>
           </button>
         <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+        <% if !session[:user_id] %>
+          <a class="navbar-brand" href="<%= new_user_path %>">Sign Up</a>
+        <% else %>
+          <a class="navbar-brand" href="<%= logout_path %>">Log Out</a>
+        <% end %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
