--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header" style="width: 100%;">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -18,10 +18,19 @@
             <span class="icon-bar"></span>
           </button>
         <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+
+        <%= link_to "Attractions", attractions_path, class:"navbar-brand" %>
+        <%= link_to "Users", users_path, class:"navbar-brand" %>
+        <% if is_logged_in? %>
+          <%= link_to "Log Out", session_path(session), method: :delete, class:"navbar-brand"%>
+        <% else %>
+          <%= link_to "Sign In", new_session_path,  class:"navbar-brand"%>
+          <%= link_to "Sign Up", new_user_path, class:"navbar-brand"%>
+        <% end %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            
+
           </ul>
         </div><!--/.nav-collapse -->
       </div>
