--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+
+<%= render partial: "form", locals: {user: @user} %>
 
 
 <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
