--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -6,6 +6,11 @@
 
 <% @attractions.each do |attraction| %>
 
-  <%= link_to "Go on #{attraction.name}", attraction_path(attraction) %><br>
+  <% if current_user.try(:admin) %>
+    <%= link_to "Show #{attraction.name}", attraction_path(attraction) %><br>
+    <%= link_to "Edit #{attraction.name}", edit_attraction_path(attraction) %><br>
+  <% else %>
+    <%= link_to "Go on #{attraction.name}", attraction_path(attraction) %><br>
+  <% end %>
 
 <% end %>
