--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,17 @@
 <h1>User Index Page</h1>
+
+<h2>User List</h2>
+
+<% if current_user.try(:admin) %>
+
+  <ul>
+    <% @users.each do |user| %>
+
+    <li><%= link_to user.name, user_path(user) %></li>
+
+    <% end %>
+  </ul>
+
+<% elsif current_user %>
+  <%= link_to current_user.name, user_path(current_user) %>
+<% end %>
