--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+        <a class="navbar-brand" href="<%= root_url %>">Home</a>
+        <% if logged_in? %>
+          <a class="navbar-brand" href="<%= user_path(current_user) %>"><%= current_user.name %>'s profile</a>
+          <a class="navbar-brand" href="/logout">Log Out</a>
+        <% else %>
+          <a class="navbar-brand" href="/signin">Login</a>
+          <a class="navbar-brand" href="/users/new">Sign Up</a>
+        <% end %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
