--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,14 @@
             <span class="icon-bar"></span>
           </button>
         <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+        <% if logged_in? %>
+          <%= link_to  "#{current_user.name}'s Profile'", user_path(current_user), class: "navbar-brand" %> 
+          <%= link_to  "Log Out", logout_path, class: "navbar-brand" %>
+          
+        <% else %>
+          <a class="navbar-brand" href="/signin">Login</a>
+          <a class="navbar-brand" href="/users/new">Sign Up</a>
+        <% end %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
